[tool.poetry]
name = "django-elevate"
version = "2.0.1"
description = "Extra security for your sensitive pages"
authors = ["Justin Mayer <entroP@gmail.com>"]
readme = "README.rst"
license = "BSD"
keywords = ["django", "security", "authentication", "permissions"]

[tool.autopub]
project-name = "Elevate"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
changelog-file = "docs/changelog/index.rst"
version-strings = ["setup.py"]
tag-prefix = "v"

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
