[tool.poetry]
name = "django-elevate"
version = "2.0.3"
description = "Extra security for your sensitive pages"
authors = ["Justin Mayer <entroP@gmail.com>"]
readme = "README.rst"
license = "BSD"
keywords = ["django", "security", "authentication", "permissions"]

[tool.autopub]
project-name = "Elevate"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"
changelog-file = "docs/changelog/index.rst"
version-strings = ["setup.py"]
tag-prefix = "v"
append-github-contributor = true

[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
